--- a/src/Services/Insightify.Friendship/Insightify.Friendship/Insightify.Friendship.csproj
+++ b/src/Services/Insightify.Friendship/Insightify.Friendship/Insightify.Friendship.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\FriendshipController.cs~RF61ef4.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.2" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
