--- a/src/Common/Insightify.Framework/Messaging/Insightify.Framework.Messaging.Abstractions/Insightify.Framework.Messaging.Abstractions.csproj
+++ b/src/Common/Insightify.Framework/Messaging/Insightify.Framework.Messaging.Abstractions/Insightify.Framework.Messaging.Abstractions.csproj
@@ -5,5 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<PropertyGroup>
+		<PackageId>Insightify.Framework.Messaging.Abstractions</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Insightify</Authors>
+		<Description>Messaging Abstractions Logic for the Insighfity.Project</Description>
+	</PropertyGroup>
 </Project>
