--- a/src/Common/Insightify.Framework/Mongo/Insightify.Framework.MongoDb.Abstractions/Insightify.Framework.MongoDb.Abstractions.csproj
+++ b/src/Common/Insightify.Framework/Mongo/Insightify.Framework.MongoDb.Abstractions/Insightify.Framework.MongoDb.Abstractions.csproj
@@ -5,7 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<PropertyGroup>
+		<PackageId>Insightify.Framework.Mongo.Abstractions</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Insightify</Authors>
+		<Description>MongoDb Abstractions Logic for the Insighfity.Project</Description>
+	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.19.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
