--- a/src/Services/Insightify.Posts/Insightify.Posts.Startup/Insightify.Posts.Startup.csproj
+++ b/src/Services/Insightify.Posts/Insightify.Posts.Startup/Insightify.Posts.Startup.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Insightify.Framework" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
