--- a/src/Services/Insightify.Posts/Insightify.Posts.Application/Insightify.Posts.Application.csproj
+++ b/src/Services/Insightify.Posts/Insightify.Posts.Application/Insightify.Posts.Application.csproj
@@ -7,13 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Posts\Queries\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="Insightify.Framework.Pagination" Version="1.0.0" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
