--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.3" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+    <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
