Added news logic to api gateway

--- a/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj
+++ b/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Insightify.Framework.Logging" Version="1.0.0" />
     <PackageReference Include="Insightify.Framework.Pagination" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Refit" Version="7.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
