--- a/src/Web/Insightify.SPA/Insightify.SPA/Properties/launchSettings.json
+++ b/src/Web/Insightify.SPA/Insightify.SPA/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "http://localhost:5099/",
       "environmentVariables": {
