--- a/.github/workflows/identity-server.yml
+++ b/.github/workflows/identity-server.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Insightify.IdentityAPI.csproj --no-build --verbosity normal
