--- a/.github/workflows/identity-server.yml
+++ b/.github/workflows/identity-server.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: orionvt3@gmail.com
+          password: orion0713
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
