update is dockefile again

--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Dockerfile
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Dockerfile
@@ -1,4 +1,4 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
@@ -7,10 +7,10 @@ EXPOSE 5001
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Insightify.IdentityAPI/Insightify.IdentityAPI.csproj", "Insightify.IdentityAPI/"]
-RUN dotnet restore "Insightify.IdentityAPI/Insightify.IdentityAPI.csproj"
+COPY ["Insightify.IdentityAPI.csproj", "./"] # Copy the project file to the current directory
+RUN dotnet restore "Insightify.IdentityAPI.csproj"
 COPY . .
-WORKDIR "/src/Insightify.IdentityAPI"
+WORKDIR "/src"
 RUN dotnet build "Insightify.IdentityAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
