--- a/.github/workflows/identity-server.yml
+++ b/.github/workflows/identity-server.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: sk13s
+          username: sk1es
           password: orion0713
       
       - name: Build and push Docker image
@@ -50,4 +50,4 @@ jobs:
           context: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI
           file: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Dockerfile
           push: true
-          tags: sk13s/insightify.identity
+          tags: sk1es/insightify.identity
