--- a/.github/workflows/identity-server.yml
+++ b/.github/workflows/identity-server.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: orionvt3@gmail.com
-          password: orion0713
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
@@ -50,4 +50,4 @@ jobs:
           context: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI
           file: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Dockerfile
           push: true
-          tags: sk13s/insightify.identity
+          tags: ${{secrets.DOCKER_USERNAME}}/insightify.identity
