--- a/.github/workflows/identity-server.yml
+++ b/.github/workflows/identity-server.yml
@@ -32,6 +32,7 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: build
     env:
       working-directory: src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI
     steps:
