--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,8 +2,9 @@ name: SonarCloud
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
+    branches: ["develop"]
     types: [opened, synchronize, reopened]
 jobs:
   build:
