--- a/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\index.css" />
+  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Insightify.Framework" Version="2.0.0" />
+		<PackageReference Include="Insightify.Framework.Logging" Version="1.0.0" />
+		<PackageReference Include="Insightify.Framework.Pagination" Version="1.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.12" />
+		<PackageReference Include="Refit" Version="7.0.0" />
+		<PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+	</ItemGroup>
 </Project>
