unfinished attempt to hook notifications. changes in insightify framework

--- a/src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Insightify.NewsBackgroundTasks.csproj
+++ b/src/Services/Insightify.NewsAPI/Insightify.NewsBackgroundTasks/Insightify.NewsBackgroundTasks.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="7.0.2" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.1.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="7.0.0" />
