--- a/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Insightify.Framework.Pagination" Version="1.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.12" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.12" />
 		<PackageReference Include="Refit" Version="7.0.0" />
 		<PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
