--- a/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj
+++ b/src/Gateways/Insightify.Web.Gateway/Insightify.Web.Gateway/Insightify.Web.Gateway.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Refit" Version="7.0.0" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+    <PackageReference Include="Refit.Newtonsoft.Json" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
