--- a/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Insightify.MVC.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.12" />
 		<PackageReference Include="Refit" Version="7.0.0" />
 		<PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+		<PackageReference Include="Refit.Newtonsoft.Json" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="wwwroot\js\financialData\" />
