--- a/src/Services/Insightify.NewsAPI/Insightify.NewsAPI/Dockerfile
+++ b/src/Services/Insightify.NewsAPI/Insightify.NewsAPI/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Insightify.NewsAPI/Insightify.NewsAPI.csproj", "Insightify.NewsAPI/"]
+COPY ["Insightify.NewsAPI.csproj", "Insightify.NewsAPI/"]
 RUN dotnet restore "Insightify.NewsAPI/Insightify.NewsAPI.csproj"
 COPY . .
 WORKDIR "/src/Insightify.NewsAPI"
