--- a/src/Services/Insightify.NewsAPI/Insightify.NewsAPI/Dockerfile
+++ b/src/Services/Insightify.NewsAPI/Insightify.NewsAPI/Dockerfile
@@ -1,4 +1,4 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
@@ -6,7 +6,7 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Insightify.NewsAPI.csproj", "Insightify.NewsAPI/"]
+COPY ["Insightify.NewsAPI/Insightify.NewsAPI.csproj", "Insightify.NewsAPI/"]
 RUN dotnet restore "Insightify.NewsAPI/Insightify.NewsAPI.csproj"
 COPY . .
 WORKDIR "/src/Insightify.NewsAPI"
